# ccc-node

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  setup.sh
bridge/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README-zh.md  README.md  __main__.py  crash-policy.env  pre-kill.sh  pyproject.toml  requirements-voice.txt  requirements.lock.txt  requirements.txt  restart.test.sh  service-install.test.sh  service-launchd.sh  service-systemd.sh  setup.sh  start.sh
bridge/core/: agent_runtime.py  bot.py  bot_access.py  bot_approvals.py  bot_callbacks.py  bot_commands.py  bot_delivery.py  bot_lifecycle.py  bot_shared.py  bot_status.py  bot_voice.py  claude_runtime.py  codex_app_server.py  codex_runtime.py  codex_runtime_pool.py  conversation_paths.py  crash_policy.py  curated_memory.py  dead_session_recovery.py  dead_session_wakeup.py  heartbeat.py  lifecycle_audit.py  lifecycle_hook.py  lifecycle_observation.py  media.py  memory_audience.py  paths.py  project_chat.py  project_chat_history.py  project_chat_process.py  project_chat_reader.py  project_chat_state.py  project_chat_types.py  provider_capabilities.py  push_notifier.py  restart_handoff.py  revert.py  sdk_text.py  session_isolation.py  session_resume.py  (+9 more)
bridge/memory/: __init__.py  codex_exec_backend.py  codex_snapshot.py  distill_extraction.py  distill_honcho_worker.py  distill_journal.py  distill_local_sink.py  distill_local_worker.py  distill_types.py  distill_wiki_sink.py  distill_wiki_worker.py  distill_worker.py  promotion.py  skill_candidate.py  skill_candidate_backend.py  skill_candidate_worker.py
bridge/session/: manager.py  store.py
bridge/tests/: conftest.py  runtime_conformance.py  sys_modules_isolation.py  test_access_control_guard.py  test_agent_runtime_contract.py  test_bash_policy.py  test_bot_access_paths.py  test_bot_delivery_paths.py  test_bot_delivery_static.py  test_bot_status_callback.py  test_claude_runtime_options.py  test_claude_unrestricted.py  test_codex_app_server.py  test_codex_exec_distill_backend.py  test_codex_runtime.py  test_codex_runtime_pool.py  test_codex_telegram_approval.py  test_config_hermetic_load.py  test_config_spacing.py  test_config_voice_provider.py  test_connection_resilience.py  test_conversation_paths.py  test_crash_policy.py  test_dead_session_recovery.py  test_dead_session_wakeup.py  test_dependency_lower_bounds.py  test_deps_install_mode.py  test_distill_extraction.py  test_distill_honcho_worker.py  test_distill_journal.py  test_distill_local_journal.py  test_distill_local_sink.py  test_distill_local_worker.py  test_distill_roundtrip.py  test_distill_snapshot_scheduling.py  test_distill_wiki_journal.py  test_distill_wiki_sink.py  test_distill_wiki_worker.py  test_distill_worker.py  test_duration_log.py  (+78 more)
bridge/utils/: audio_processor.py  chat_logger.py  config.py  duration_log.py  health.py  health_alerts.py  health_render.py  heartbeat_store.py  logging_setup.py  memory_policy.py  (+15 more)
(+273 files in other folders)
